--- a/Development/templates/index.pug
+++ b/Development/templates/index.pug
@@ -28,7 +28,7 @@ head
   link(rel='stylesheet', type='text/css', href='css/style.css')
 
 body
-  .container-fluid
+  .container
     header.header
       nav.navbar.navbar-default
         .container-fluid
@@ -73,10 +73,6 @@ body
             h3.promo-block__header Donec ligula
             p.promo-block__description Nullam tempus egestas efficitur. Sed quam dolor, vulputate sed mattis et, sodales quis orci. Ut arcu arcu, faucibus eu risus blandit,.
       button.btn.btn-default.main-button.promo__main-button(type='button') Read more
-
-    
-
-    
     section.news
       h3.news__header Our news
       .row
@@ -108,9 +104,80 @@ body
             button.btn.btn-default.main-button.signup-form__main-button(type="submit") Sign up
     section.goods
       article.goods-block
-        h3.goods-block__header Ipsum dolor sit amet
-        
-
+        .row
+          .col-lg-6
+            h3.goods-block__header Ipsum dolor sit amet
+            p.goods-block__paragraph Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.
+            p.goods-block__paragraph Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.
+            button.btn.btn-default.main-button.goods-block__main-button(type='button') Read more
+          .col-lg-6
+            aside.goods-block__image
+              img.goods-block__image(src="images/goods-img2.png", alt="goods-image-2")
+      article.goods-block
+        .row
+          .col-lg-6
+            aside.goods-block__image
+              img.goods-block__image(src="images/goods-img2.png", alt="goods-image-2")
+          .col-lg-6
+            h3.goods-block__header Ipsum dolor sit amet
+            p.goods-block__paragraph Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.
+            p.goods-block__paragraph Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.
+            button.btn.btn-default.main-button.goods-block__main-button.goods-block__main-button_blue(type='button') Read more
+    section.links
+      .row
+        .col-lg-4
+          nav.links-block
+            ul
+              li.links-block__item
+                a.links-block__item-link(href="#") Ad litora torquent
+              li.links-block__item
+                a.links-block__item-link(href="#") Per conubia
+              li.links-block__item
+                a.links-block__item-link(href="#") Nostra
+              li.links-block__item
+                a.links-block__item-link(href="#") Per inceptos
+              li.links-block__item
+                a.links-block__item-link(href="#") Himenaeos
+              li.links-block__item
+                a.links-block__item-link(href="#") In consectetur
+        .col-lg-4
+          nav.links-block
+            ul
+              li.links-block__item
+                a.links-block__item-link(href="#") Taciti sociosqu
+              li.links-block__item
+                a.links-block__item-link(href="#") Ad litora torquent
+              li.links-block__item
+                a.links-block__item-link(href="#") Per conubia
+              li.links-block__item
+                a.links-block__item-link(href="#") Himenaeos
+              li.links-block__item
+                a.links-block__item-link(href="#") In consectetur
+              li.links-block__item
+                a.links-block__item-link(href="#") Nisi sed blandit
+              li.links-block__item
+                a.links-block__item-link(href="#") Tincidunt
+        .col-lg-4
+          nav.links-block
+            ul
+              li.links-block__item
+                a.links-block__item-link(href="#") Nostra
+              li.links-block__item
+                a.links-block__item-link(href="#") Per inceptos
+              li.links-block__item
+                a.links-block__item-link(href="#") Himenaeos
+              li.links-block__item
+                a.links-block__item-link(href="#") In consectetur
+              li.links-block__item
+                a.links-block__item-link(href="#") Nisi sed blandit
+              li.links-block__item
+                a.links-block__item-link(href="#") Tincidunt
+      
+  
+  
+    footer.footer
+      p.footer__paragraph Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.<br>
+        |Try awsome tool for desgners symu.co
   // jQuery
   script(src="components/jquery/jquery.min.js")
 
