--- a/Development/css/style.css
+++ b/Development/css/style.css
@@ -1,2 +1,6 @@
+.site-navigation {
+  box-sizing: border-box;
+  height: 147px;
+  background-color: #ebedef; }
 
 /*# sourceMappingURL=style.css.map */
