--- a/Development/templates/scss/style.scss
+++ b/Development/templates/scss/style.scss
@@ -5,6 +5,10 @@ sans-serif;
 $roboto-slab: 'Roboto Slab',
 serif;
 
-// h1,h2,h3,h4,h5,h6 {
-//   fmargin: 0;
-// }
+
+
+.site-navigation {
+  box-sizing: border-box;
+  height: 147px;
+  background-color: #ebedef;
+}
