--- a/Development/templates/scss/style.scss
+++ b/Development/templates/scss/style.scss
@@ -4,11 +4,326 @@ $roboto: 'Roboto',
 sans-serif;
 $roboto-slab: 'Roboto Slab',
 serif;
+$site-wrapper: 350px;
+$navbar-height: 100px;
+body {
+  padding-top: $navbar-height;
+  position: relative;
+  font-family: $roboto-slab;
+  text-align: center;
+}
 
+a,
+a:hover,
+a:visited {
+  text-decoration: none !important;
+}
 
+.container-fluid {
+  margin-left: $site-wrapper;
+  margin-right: $site-wrapper;
+}
 
-.site-navigation {
+.main-button {
+  border-style: solid;
+  border-radius: 2em;
+  border-width: 1px;
+  padding: 12px 60px;
+  border-color: rgba(255, 255, 255, 50);
+  background-color: #ffffff;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.site-nav {
   box-sizing: border-box;
-  height: 147px;
+  height: $navbar-height;
   background-color: #ebedef;
+}
+
+.site-nav__title {
+  margin: 4px 0 0 0;
+  color: #30343e;
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.site-nav__logo-comment {
+  color: #dd4b2b;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+
+.site-navlist {
+  margin-top: 25px;
+}
+
+.site-navlist__item-link {
+  padding-left: 22px !important;
+  padding-right: 22px !important;
+  font-size: 18px;
+  font-weight: 400;
+  color: #31353e !important;
+  border-radius: 2em;
+  -webkit-transition: background-color 0s;
+  transition: background-color 0s;
+  &:hover {
+    color: #dd4b2b !important;
+  }
+  /* &--active,*/
+  /* &--active:hover {*/
+  /*   color: #edeff1 !important;*/
+  /*   background-color: #dd4b2b !important;*/
+  /*   border-radius: 2em;*/
+  /* }*/
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>.active>a:hover {
+  color: #edeff1 !important;
+  background-color: #dd4b2b !important;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+}
+
+.promo {
+  background: -webkit-linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1416453072034-c8dbfa2856b5.png") 50% 70% no-repeat;
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1416453072034-c8dbfa2856b5.png") 50% 70% no-repeat;
+  background-size: cover;
+  padding: 200px 0 138px 0;
+  margin-bottom: 0;
+}
+
+.promo__header {
+  color: #ffffff !important;
+  font-size: 72px !important;
+  font-weight: 300;
+}
+
+.promo__header-bottom {
+  margin-top: 0;
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.promo-block {
+  margin-top: 122px;
+}
+
+.promo-block__header {
+  color: #ffffff !important;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.promo-block__description {
+  padding-left: 30px;
+  padding-right: 30px;
+  font-family: $roboto;
+  color: #ffffff;
+  font-size: 15px !important;
+  font-weight: 300;
+  line-height: 30px;
+}
+
+.promo__main-button {
+  margin-top: 57px;
+  color: #612316;
+}
+
+.news {
+  padding: 56px 0 102px;
+  background-color: #ebedef;
+}
+
+.news__header {
+  color: #31353e;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.news-block {
+  margin-top: 70px;
+}
+
+.news-block__header {
+  margin-top: 35px;
+  margin-bottom: 0;
+  color: #31353e;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.news-block__description {
+  margin-top: 5px;
+  padding: 0 41px;
+  font-family: Roboto;
+  color: #31353e;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 30px;
+}
+
+.news-block__main-button {
+  margin-top: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+  color: #4e5159;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.newsletter {
+  padding: 66px 0 90px;
+  background: -webkit-linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png") 50% 50% no-repeat;
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png") 50% 50% no-repeat;
+  background-size: cover;
+}
+
+.newsletter__header {
+  margin-bottom: 0;
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.newsletter__text {
+  margin-top: 12px;
+  font-family: Roboto;
+  color: #ffffff;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 24px;
+}
+
+.signup-form {
+  margin-top: 39px;
+}
+
+.signup-form__email {
+  box-sizing: border-box;
+  padding: 0 56px 0 36px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgba(255, 255, 255, 50);
+  border-radius: 1.5em;
+  background-color: rgba(255, 255, 255, 0.2);
+  width: 340px;
+  height: 56px;
+  color: #f3f4f6 !important;
+  font-size: 18px;
+  font-weight: 400;
+  &::-webkit-input-placeholder {
+    color: #f3f4f6;
+  }
+  &::-moz-placeholder {
+    color: #f3f4f6;
+  }
+  &:-ms-input-placeholder {
+    color: #f3f4f6;
+  }
+  &::placeholder {
+    color: #f3f4f6;
+  }
+  &:focus {
+    border-color: yellowgreen;
+    border-width: 2px;
+    outline: none;
+    &::-webkit-input-placeholder {
+      color: transparent;
+    }
+    &::-moz-placeholder {
+      color: transparent;
+    }
+    &:-ms-input-placeholder {
+      color: transparent;
+    }
+    &::placeholder {
+      color: transparent;
+    }
+  }
+}
+
+.signup-form__main-button {
+  padding-left: 75px;
+  padding-right: 75px;
+  color: #612316;
+  margin-left: -50px;
+  vertical-align: top;
+}
+
+.goods {
+  padding: 20px 0 65px;
+}
+.goods-block {
+  margin-top: 20px;
+}
+.goods-block__header {
+  padding-top: 55px;
+  color: #191b29;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: left;
+}
+
+.goods-block__paragraph {
+  margin-top: 19px;
+  margin-bottom: 30px;
+  font-family: Roboto;
+  color: #191b29;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 30px;
+  text-align: left;
+}
+
+.goods-block__main-button {
+  margin-top: 13px;
+  float: left;
+  background-color: #dd4b2b;
+  color: #ffffff;
+}
+
+.goods-block__main-button.goods-block__main-button_blue {
+  background-color: #4b4e73;
+}
+
+.links {
+  padding: 88px 0 56px;
+  background-color: #d75d0e;
+}
+
+.links-block__item {
+  list-style: none;
+}
+
+.links-block__item-link,
+.links-block__item-link:visited {
+  font-family: Roboto;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 36px;
+  text-decoration: none;
+}
+
+.footer {
+  padding: 84px 0 232px;
+  background: -webkit-linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png") 50% 50% no-repeat;
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png") 50% 50% no-repeat;
+  background-size: cover;
+}
+
+.footer__paragraph {
+  font-family: $montserrat;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 100;
+  line-height: 24px;
 }
