--- a/Development/css/style.css
+++ b/Development/css/style.css
@@ -1,3 +1,7 @@
+html,
+body {
+  height: 100%; }
+
 body {
   padding-top: 100px;
   position: relative;
@@ -6,23 +10,42 @@ body {
 
 a,
 a:hover,
+a:active,
+a:focus,
 a:visited {
   text-decoration: none !important; }
+
+.site-wrapper {
+  min-height: 100%;
+  margin-bottom: -375px; }
+  .site-wrapper:after {
+    content: "";
+    display: block;
+    height: 375px; }
 
 .container-fluid {
   margin-left: 350px;
   margin-right: 350px; }
 
 .main-button {
+  height: 54px;
   border-style: solid;
   border-radius: 2em;
   border-width: 1px;
-  padding: 12px 60px;
+  padding: 0 60px;
   border-color: white;
   background-color: #ffffff;
   font-size: 18px;
   font-weight: 400;
-  line-height: 30px; }
+  line-height: 1.6;
+  -webkit-transition-property: background-color, border-color, color;
+  transition-property: background-color, border-color, color;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s; }
+  .main-button:hover {
+    background-color: #dd4b2b;
+    border-color: #d75d0e;
+    color: #ffffff; }
 
 .site-nav {
   box-sizing: border-box;
@@ -38,7 +61,7 @@ a:visited {
 .site-nav__logo-comment {
   color: #dd4b2b;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 1.2;
   letter-spacing: 1px;
   font-weight: 400; }
 
@@ -53,13 +76,7 @@ a:visited {
   color: #31353e !important;
   border-radius: 2em;
   -webkit-transition: background-color 0s;
-  transition: background-color 0s;
-  /* &--active,*/
-  /* &--active:hover {*/
-  /*   color: #edeff1 !important;*/
-  /*   background-color: #dd4b2b !important;*/
-  /*   border-radius: 2em;*/
-  /* }*/ }
+  transition: background-color 0s; }
   .site-navlist__item-link:hover {
     color: #dd4b2b !important; }
 
@@ -72,8 +89,11 @@ a:visited {
   transition: background-color 0.3s; }
 
 .promo {
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1416453072034-c8dbfa2856b5.png") 50% 70% no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1416453072034-c8dbfa2856b5.png") 50% 70% no-repeat;
+  background-color: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 50% 70% no-repeat;
+  background-color: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  background-image: url("../images/photo-1416453072034-c8dbfa2856b5.png");
+  background-position: 50% 70%;
+  background-repeat: no-repeat;
   background-size: cover;
   padding: 200px 0 138px 0;
   margin-bottom: 0; }
@@ -104,7 +124,7 @@ a:visited {
   color: #ffffff;
   font-size: 15px !important;
   font-weight: 300;
-  line-height: 30px; }
+  line-height: 2; }
 
 .promo__main-button {
   margin-top: 57px;
@@ -136,7 +156,7 @@ a:visited {
   color: #31353e;
   font-size: 15px;
   font-weight: 300;
-  line-height: 30px; }
+  line-height: 2; }
 
 .news-block__main-button {
   margin-top: 20px;
@@ -149,8 +169,11 @@ a:visited {
 
 .newsletter {
   padding: 66px 0 90px;
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png") 50% 50% no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png") 50% 50% no-repeat;
+  background-color: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 50% 70% no-repeat;
+  background-color: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  background-image: url("../images/photo-1428660386617-8d277e7deaf2.png");
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
   background-size: cover; }
 
 .newsletter__header {
@@ -165,7 +188,7 @@ a:visited {
   color: #ffffff;
   font-size: 15px;
   font-weight: 300;
-  line-height: 24px; }
+  line-height: 1.6; }
 
 .signup-form {
   margin-top: 39px; }
@@ -179,10 +202,12 @@ a:visited {
   border-radius: 1.5em;
   background-color: rgba(255, 255, 255, 0.2);
   width: 340px;
-  height: 56px;
+  height: 54px;
   color: #f3f4f6 !important;
   font-size: 18px;
-  font-weight: 400; }
+  font-weight: 400;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s; }
   .signup-form__email::-webkit-input-placeholder {
     color: #f3f4f6; }
   .signup-form__email::-moz-placeholder {
@@ -191,9 +216,10 @@ a:visited {
     color: #f3f4f6; }
   .signup-form__email::placeholder {
     color: #f3f4f6; }
+  .signup-form__email:hover {
+    border-color: #dd4b2b; }
   .signup-form__email:focus {
-    border-color: yellowgreen;
-    border-width: 2px;
+    border-color: #dd4b2b;
     outline: none; }
     .signup-form__email:focus::-webkit-input-placeholder {
       color: transparent; }
@@ -210,6 +236,8 @@ a:visited {
   color: #612316;
   margin-left: -50px;
   vertical-align: top; }
+  .signup-form__main-button:hover {
+    border-color: white; }
 
 .goods {
   padding: 20px 0 65px; }
@@ -231,7 +259,7 @@ a:visited {
   color: #191b29;
   font-size: 16px;
   font-weight: 300;
-  line-height: 30px;
+  line-height: 1.8;
   text-align: left; }
 
 .goods-block__main-button {
@@ -239,9 +267,17 @@ a:visited {
   float: left;
   background-color: #dd4b2b;
   color: #ffffff; }
+  .goods-block__main-button:hover {
+    color: #4e5159;
+    background-color: white;
+    border-color: #dd4b2b; }
 
 .goods-block__main-button.goods-block__main-button_blue {
   background-color: #4b4e73; }
+  .goods-block__main-button.goods-block__main-button_blue:hover {
+    color: #4e5159;
+    background-color: white;
+    border-color: #4b4e73; }
 
 .links {
   padding: 88px 0 56px;
@@ -256,10 +292,14 @@ a:visited {
   color: #ffffff;
   font-size: 18px;
   font-weight: 400;
-  line-height: 36px;
+  line-height: 2;
   text-decoration: none; }
+  .links-block__item-link:hover,
+  .links-block__item-link:visited:hover {
+    color: #4e5159; }
 
 .footer {
+  height: 375px;
   padding: 84px 0 232px;
   background: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png") 50% 50% no-repeat;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png") 50% 50% no-repeat;
@@ -270,6 +310,6 @@ a:visited {
   color: #ffffff;
   font-size: 18px;
   font-weight: 100;
-  line-height: 24px; }
+  line-height: 1.3; }
 
 /*# sourceMappingURL=style.css.map */
