--- a/Development/templates/scss/style.scss
+++ b/Development/templates/scss/style.scss
@@ -1,15 +1,15 @@
-$montserrat: 'Montserrat',
+$montserrat: "Montserrat",
 sans-serif;
-$roboto: 'Roboto',
+$roboto: "Roboto",
 sans-serif;
-$roboto-slab: 'Roboto Slab',
+$roboto-slab: "Roboto Slab",
 serif;
 $site-wrapper: 350px;
 $navbar-height: 100px;
 $footer-height: 375px;
 html,
 body {
-  height: 100%
+  height: 100%;
 }
 
 body {
@@ -54,9 +54,9 @@ a:visited {
   font-weight: 400;
   line-height: 1.6;
   -webkit-transition-property: background-color, border-color, color;
-  transition-property: background-color, border-color, color;
+          transition-property: background-color, border-color, color;
   -webkit-transition-duration: 0.2s;
-  transition-duration: 0.2s;
+          transition-duration: 0.2s;
   &:hover {
     background-color: #dd4b2b;
     border-color: #d75d0e;
@@ -97,7 +97,7 @@ a:visited {
   color: #31353e !important;
   border-radius: 2em;
   -webkit-transition: background-color 0s;
-  transition: background-color 0s;
+          transition: background-color 0s;
   &:hover {
     color: #dd4b2b !important;
   }
@@ -109,12 +109,12 @@ a:visited {
   color: #edeff1 !important;
   background-color: #dd4b2b !important;
   -webkit-transition: background-color 0.3s;
-  transition: background-color 0.3s;
+          transition: background-color 0.3s;
 }
 
 .promo {
-  background-color: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 50% 70% no-repeat;
-  background-color: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 50% 70% no-repeat;
+  background:         linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
   background-image: url("../images/photo-1416453072034-c8dbfa2856b5.png");
   background-position: 50% 70%;
   background-repeat: no-repeat;
@@ -206,8 +206,8 @@ a:visited {
 
 .newsletter {
   padding: 66px 0 90px;
-  background-color: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 50% 70% no-repeat;
-  background-color: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 50% 70% no-repeat;
+  background:         linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
   background-image: url("../images/photo-1428660386617-8d277e7deaf2.png");
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -248,7 +248,7 @@ a:visited {
   font-size: 18px;
   font-weight: 400;
   -webkit-transition-duration: 0.2s;
-  transition-duration: 0.2s;
+          transition-duration: 0.2s;
   &::-webkit-input-placeholder {
     color: #f3f4f6;
   }
@@ -366,8 +366,12 @@ a:visited {
 .footer {
   height: $footer-height;
   padding: 84px 0 232px;
-  background: -webkit-linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png") 50% 50% no-repeat;
-  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png") 50% 50% no-repeat;
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+  50% 70% no-repeat;
+  background:         linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  background-image: url("../images/photo-1428660386617-8d277e7deaf2.png");
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
