--- a/Development/templates/postcss/style.css
+++ b/Development/templates/postcss/style.css
@@ -1,46 +1,31 @@
-$montserrat: "Montserrat",
-sans-serif;
-$roboto: "Roboto",
-sans-serif;
-$roboto-slab: "Roboto Slab",
-serif;
-$site-wrapper: 350px;
-$navbar-height: 100px;
-$footer-height: 375px;
 html,
 body {
-  height: 100%;
-}
+  height: 100%; }
 
 body {
-  padding-top: $navbar-height;
+  padding-top: 100px;
   position: relative;
-  font-family: $roboto-slab;
-  text-align: center;
-}
-  
+  font-family: "Roboto Slab", serif;
+  text-align: center; }
+
 a,
 a:hover,
 a:active,
 a:focus,
 a:visited {
-  text-decoration: none !important;
-}
+  text-decoration: none !important; }
 
 .site-wrapper {
   min-height: 100%;
-  margin-bottom: -$footer-height;
-  &:after {
+  margin-bottom: -375px; }
+  .site-wrapper:after {
     content: "";
     display: block;
-    height: $footer-height;
-  }
-}
+    height: 375px; }
 
 .container-fluid {
-  margin-left: $site-wrapper;
-  margin-right: $site-wrapper;
-}
+  margin-left: 350px;
+  margin-right: 350px; }
 
 .main-button {
   height: 54px;
@@ -48,44 +33,38 @@ a:visited {
   border-radius: 2em;
   border-width: 1px;
   padding: 0 60px;
-  border-color: rgba(255, 255, 255, 50);
+  border-color: white;
   background-color: #ffffff;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.6;
   transition-property: background-color, border-color, color;
-  transition-duration: 0.2s;
-  &:hover {
+  transition-duration: 0.2s; }
+  .main-button:hover {
     background-color: #dd4b2b;
     border-color: #d75d0e;
-    color: #ffffff;
-  }
-}
+    color: #ffffff; }
 
 .site-nav {
   box-sizing: border-box;
-  height: $navbar-height;
-  background-color: #ebedef;
-}
+  height: 100px;
+  background-color: #ebedef; }
 
 .site-nav__title {
   margin: 4px 0 0 0;
   color: #30343e;
   font-size: 36px;
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .site-nav__logo-comment {
   color: #dd4b2b;
   font-size: 16px;
   line-height: 1.2;
   letter-spacing: 1px;
-  font-weight: 400;
-}
+  font-weight: 400; }
 
 .site-navlist {
-  margin-top: 25px;
-}
+  margin-top: 25px; }
 
 .site-navlist__item-link {
   padding-left: 22px !important;
@@ -94,19 +73,16 @@ a:visited {
   font-weight: 400;
   color: #31353e !important;
   border-radius: 2em;
-  transition: background-color 0s;
-  &:hover {
-    color: #dd4b2b !important;
-  }
-}
+  transition: background-color 0s; }
+  .site-navlist__item-link:hover {
+    color: #dd4b2b !important; }
 
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>.active>a:focus,
-.navbar-default .navbar-nav>.active>a:hover {
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:focus,
+.navbar-default .navbar-nav > .active > a:hover {
   color: #edeff1 !important;
   background-color: #dd4b2b !important;
-  transition: background-color 0.3s;
-}
+  transition: background-color 0.3s; }
 
 .promo {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
@@ -115,69 +91,58 @@ a:visited {
   background-repeat: no-repeat;
   background-size: cover;
   padding: 200px 0 138px 0;
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 .promo__header {
   color: #ffffff !important;
   font-size: 72px !important;
-  font-weight: 300;
-}
+  font-weight: 300; }
 
 .promo__header-bottom {
   margin-top: 0;
   color: #ffffff;
   font-size: 30px;
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .promo-block {
-  margin-top: 122px;
-}
+  margin-top: 122px; }
 
 .promo-block__header {
   color: #ffffff !important;
   font-size: 30px;
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .promo-block__description {
   padding-left: 30px;
   padding-right: 30px;
-  font-family: $roboto;
+  font-family: "Roboto", sans-serif;
   color: #ffffff;
   font-size: 15px !important;
   font-weight: 300;
-  line-height: 2;
-}
+  line-height: 2; }
 
 .promo__main-button {
   margin-top: 57px;
-  color: #612316;
-}
+  color: #612316; }
 
 .news {
   padding: 56px 0 102px;
-  background-color: #ebedef;
-}
+  background-color: #ebedef; }
 
 .news__header {
   color: #31353e;
   font-size: 30px;
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .news-block {
-  margin-top: 70px;
-}
+  margin-top: 70px; }
 
 .news-block__header {
   margin-top: 35px;
   margin-bottom: 0;
   color: #31353e;
   font-size: 24px;
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .news-block__description {
   margin-top: 5px;
@@ -186,8 +151,7 @@ a:visited {
   color: #31353e;
   font-size: 15px;
   font-weight: 300;
-  line-height: 2;
-}
+  line-height: 2; }
 
 .news-block__main-button {
   margin-top: 20px;
@@ -196,8 +160,7 @@ a:visited {
   color: #4e5159;
   font-family: Roboto;
   font-size: 15px;
-  font-weight: 300;
-}
+  font-weight: 300; }
 
 .newsletter {
   padding: 66px 0 90px;
@@ -205,15 +168,13 @@ a:visited {
   background-image: url("../images/photo-1428660386617-8d277e7deaf2.png");
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-size: cover;
-}
+  background-size: cover; }
 
 .newsletter__header {
   margin-bottom: 0;
   color: #ffffff;
   font-size: 30px;
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .newsletter__text {
   margin-top: 12px;
@@ -221,19 +182,17 @@ a:visited {
   color: #ffffff;
   font-size: 15px;
   font-weight: 300;
-  line-height: 1.6;
-}
+  line-height: 1.6; }
 
 .signup-form {
-  margin-top: 39px;
-}
+  margin-top: 39px; }
 
 .signup-form__email {
   box-sizing: border-box;
   padding: 0 56px 0 36px;
   border-style: solid;
   border-width: 1px;
-  border-color: rgba(255, 255, 255, 50);
+  border-color: white;
   border-radius: 1.5em;
   background-color: rgba(255, 255, 255, 0.2);
   width: 340px;
@@ -241,48 +200,38 @@ a:visited {
   color: #f3f4f6 !important;
   font-size: 18px;
   font-weight: 400;
-  transition-duration: 0.2s;
-  &::placeholder {
-    color: #f3f4f6;
-  }
-  &:hover {
+  transition-duration: 0.2s; }
+  .signup-form__email::placeholder {
+    color: #f3f4f6; }
+  .signup-form__email:hover {
+    border-color: #dd4b2b; }
+  .signup-form__email:focus {
     border-color: #dd4b2b;
-  }
-  &:focus {
-    border-color: #dd4b2b;
-    outline: none;
-    &::placeholder {
-      color: transparent;
-    }
-  }
-}
+    outline: none; }
+    .signup-form__email:focus::placeholder {
+      color: transparent; }
 
 .signup-form__main-button {
   padding-left: 75px;
   padding-right: 75px;
   color: #612316;
   margin-left: -50px;
-  vertical-align: top;
-  &:hover {
-    border-color: rgba(255, 255, 255, 50);
-  }
-}
+  vertical-align: top; }
+  .signup-form__main-button:hover {
+    border-color: white; }
 
 .goods {
-  padding: 20px 0 65px;
-}
+  padding: 20px 0 65px; }
 
 .goods-block {
-  margin-top: 20px;
-}
+  margin-top: 20px; }
 
 .goods-block__header {
   padding-top: 55px;
   color: #191b29;
   font-size: 30px;
   font-weight: 700;
-  text-align: left;
-}
+  text-align: left; }
 
 .goods-block__paragraph {
   margin-top: 19px;
@@ -292,38 +241,31 @@ a:visited {
   font-size: 16px;
   font-weight: 300;
   line-height: 1.8;
-  text-align: left;
-}
+  text-align: left; }
 
 .goods-block__main-button {
   margin-top: 13px;
   float: left;
   background-color: #dd4b2b;
-  color: #ffffff;
-  &:hover {
+  color: #ffffff; }
+  .goods-block__main-button:hover {
     color: #4e5159;
-    background-color: rgba(255, 255, 255, 50);
-    border-color: #dd4b2b;
-  }
-}
+    background-color: white;
+    border-color: #dd4b2b; }
 
 .goods-block__main-button.goods-block__main-button_blue {
-  background-color: #4b4e73;
-  &:hover {
+  background-color: #4b4e73; }
+  .goods-block__main-button.goods-block__main-button_blue:hover {
     color: #4e5159;
-    background-color: rgba(255, 255, 255, 50);
-    border-color: #4b4e73;
-  }
-}
+    background-color: white;
+    border-color: #4b4e73; }
 
 .links {
   padding: 88px 0 56px;
-  background-color: #d75d0e;
-}
+  background-color: #d75d0e; }
 
 .links-block__item {
-  list-style: none;
-}
+  list-style: none; }
 
 .links-block__item-link,
 .links-block__item-link:visited {
@@ -332,26 +274,25 @@ a:visited {
   font-size: 18px;
   font-weight: 400;
   line-height: 2;
-  text-decoration: none;
-  &:hover {
-    color: #4e5159;
-  }
-}
+  text-decoration: none; }
+  .links-block__item-link:hover,
+  .links-block__item-link:visited:hover {
+    color: #4e5159; }
 
 .footer {
-  height: $footer-height;
+  height: 375px;
   padding: 84px 0 232px;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
   background-image: url("../images/photo-1428660386617-8d277e7deaf2.png");
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-size: cover;
-}
+  background-size: cover; }
 
 .footer__paragraph {
-  font-family: $montserrat;
+  font-family: "Montserrat", sans-serif;
   color: #ffffff;
   font-size: 18px;
   font-weight: 100;
-  line-height: 1.3;
-}
+  line-height: 1.3; }
+
+/*# sourceMappingURL=style.css.map */
