--- a/Development/templates/scss/style.scss
+++ b/Development/templates/scss/style.scss
@@ -4,7 +4,6 @@ $roboto: "Roboto",
 sans-serif;
 $roboto-slab: "Roboto Slab",
 serif;
-$site-wrapper: 350px;
 $navbar-height: 100px;
 $footer-height: 375px;
 html,
@@ -18,7 +17,7 @@ body {
   font-family: $roboto-slab;
   text-align: center;
 }
-  
+
 a,
 a:hover,
 a:active,
@@ -35,11 +34,6 @@ a:visited {
     display: block;
     height: $footer-height;
   }
-}
-
-.container-fluid {
-  margin-left: $site-wrapper;
-  margin-right: $site-wrapper;
 }
 
 .main-button {
@@ -109,8 +103,7 @@ a:visited {
 }
 
 .promo {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
-  background-image: url("../images/photo-1416453072034-c8dbfa2856b5.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/photo-1416453072034-c8dbfa2856b5.png");
   background-position: 50% 70%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -169,6 +162,7 @@ a:visited {
 
 .news-block {
   margin-top: 70px;
+  position: relative;
 }
 
 .news-block__header {
@@ -190,7 +184,8 @@ a:visited {
 }
 
 .news-block__main-button {
-  margin-top: 20px;
+  position: relative;
+  bottom: 0;
   padding-left: 50px;
   padding-right: 50px;
   color: #4e5159;
@@ -201,8 +196,7 @@ a:visited {
 
 .newsletter {
   padding: 66px 0 90px;
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
-  background-image: url("../images/photo-1428660386617-8d277e7deaf2.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png");
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -276,6 +270,11 @@ a:visited {
   margin-top: 20px;
 }
 
+.goods-block__image {
+  max-width: 100%;
+  max-height: auto;
+}
+
 .goods-block__header {
   padding-top: 55px;
   color: #191b29;
@@ -341,8 +340,7 @@ a:visited {
 .footer {
   height: $footer-height;
   padding: 84px 0 232px;
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
-  background-image: url("../images/photo-1428660386617-8d277e7deaf2.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/photo-1428660386617-8d277e7deaf2.png");
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -354,4 +352,131 @@ a:visited {
   font-size: 18px;
   font-weight: 100;
   line-height: 1.3;
+}
+
+@media screen and (max-width: 992px) {
+  $footer-diff-sm: 350px;
+  .site-wrapper {
+    margin-bottom: -($footer-height - $footer-diff-sm);
+    &:after {
+      height: $footer-height - $footer-diff-sm;
+    }
+  }
+  .container {
+    max-width: 970px;
+  }
+  .main-button {
+    width: 90%;
+    font-size: 24px;
+  }
+  .site-nav {
+    height: 100px;
+  }
+  .site-nav__logo {
+    margin-left: 0;
+    margin-right: 15px;
+  }
+  .site-navlist__item-link {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+  }
+  .promo,
+  .news,
+  .newsletter,
+  .goods,
+  .links
+   {
+    padding-top: 30px;
+    padding-bottom: 50px;
+  }
+  .promo-block {
+    margin-top: 50px;
+  }
+  .promo-block__description {
+    font-size: 20px !important;
+  }
+  .promo__main-button {
+    margin-top: 30px;
+  }
+  .news-block {
+    position: relative;
+  }
+  .news-block__image {
+    width: 100%;
+    border-radius: 10px;
+  }
+  .news-textblock {
+    position: absolute;
+    left: 0;
+    top: 10%;
+  }
+  .news-block__header {
+    color: #ffffff;
+    font-size: 45px;
+  }
+  .news-block__description {
+    margin-top: 40px;
+    color: #ffffff;
+    font-size: 22px;
+  }
+  .news-block__main-button {
+    margin-top: 40px;
+  }
+  .footer {
+    height: $footer-height - $footer-diff-sm;
+    padding-bottom: 132px;
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  $footer-diff-md: 150px;
+  .site-wrapper {
+    margin-bottom: -($footer-height -$footer-diff-md);
+    &:after {
+      height: $footer-height - $footer-diff-md;
+    }
+  }
+  .container {
+    max-width: 1180px;
+  }
+  .promo {
+    padding: 100px 0 80px 0;
+  }
+  .promo-block {
+    margin-top: 60px;
+  }
+  .news-block {
+    display: table;
+    overflow: hidden;
+  }
+  .news-block__image {
+    display: table-cell;
+    width: 100%;
+  }
+  .news-textblock {
+    display: table-cell;
+    width: 50%;
+    vertical-align: middle;
+  }
+  .news-block__header {
+    margin-top: 0;
+    font-size: 30px;
+
+  }
+  .news-block__description {
+    margin-top: 30px;
+  }
+  .news-block__main-button {
+    margin-top: 20px;
+  }
+  .footer {
+    height: $footer-height - $footer-diff-md;
+    padding-bottom: 132px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
 }
